--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,57 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+
+
+
 input[type="text"] {
     border-radius:25px ;
     height: 25px;
@@ -52,6 +106,12 @@ button{
     border-radius: 5px;
     border-width: 0px;
     background-color: #f8f9fa;
+    border-style: solid;
+}
+button:hover{
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    cursor: pointer;
+    border-style: solid;
 }
 a{  font-family: arial;
     font-size: 13px;
@@ -94,24 +154,43 @@ li.right{
 li.left{
     float:left;
 }
-footer ul {
-    list-style: none;
-    display: inline;
+footer {
+    /* list-style: none; */
     position:fixed;
     bottom:0;
+   /*  padding: 0; */
+    /* text-align: center; */
+    background-color: #f2f2f2;
     width:100%;
     margin: 0 auto;
-    background-color: #f2f2f2;
-    padding: 0;
-    text-align: center;
+}
+div.footer-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+   /*  align-content: space-between; */
+}
+div.left-list{
+    flex-direction: row;
+    flex-wrap:wrap;
+    justify-content: flex-end;
+    margin-right:auto;
+    
+}
+div.right-list{
+    flex-direction: row;
+    flex-wrap:wrap;
+    justify-content: flex-end;
+    margin-left:auto;
 }
 
+div div a{
+    display: inline-block;
+}
 li {
     margin: 0 5px;
 }
-.right-li{
-    text-align:right;
 
-}
-
+ul{
+    list-style:none;
 }
